feat: super basic RBAC starting point
