# src/main/resources/openapi/doc.yaml
@@ -33,7 +33,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Event'
+                $ref: './schemas/event.json'
         '400':
           description: Invalid request payload
         '401':
@@ -60,7 +60,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Event'
+                $ref: './schemas/event.json'
         '400':
           description: Invalid request payload
         '401':
@@ -89,7 +89,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Event'
+                $ref: './schemas/event.json'
         '400':
           description: Invalid request payload
         '401':
@@ -99,30 +99,30 @@ paths:
         '409':
           description: Conflict, event-id already processed
 
-components:
-  schemas:
-    Event:
-      type: object
-      properties:
-        id:
-          type: string
-        teamId:
-          type: string
-        path:
-          type: string
-        actorId:
-          type: string
-        eventType:
-          type: string
-        createdAt:
-          type: integer
-          format: int64
-          description: "Timestamp when the log entry was created (in milliseconds)"
-        confirmedAt:
-          type: integer
-          format: int64
-          description: "Timestamp when the event was synchronized confirmed (in milliseconds)"
+  /access/grant:
+    post:
+      summary: Grant or Deny Access
+      description: Grant a specific role access to an operation or resource.
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: './schemas/access/create.json'
+      responses:
+        201:
+          description: Access record saved successfully
+          content:
+            application/json:
+              schema:
+                $ref: './schemas/event.json'
+        401:
+          description: Unauthorized
+        403:
+          description: Forbidden
 
+components:
+  schemas: {}
   parameters:
     XStableEventId:
       name: x-stable-event-id
